--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -5,7 +5,7 @@ mainPath=com.cloudwise
 package=com.cloudwise
 moduleName=oppo
 #\u4F5C\u8005
-author=<a href="mailto:zafir.zhong@cloudwise.com">zafir zhong</a>
+author=<a href="mailto:1309387239@qq.com">zafir zhong</a>
 #Email
 email=zafir.zhong@cloudwise.com
 #\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
