换行符替换

--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,5 +1,5 @@
 #\u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
-# 路径和个人信息
+# \u8DEF\u5F84\u548C\u4E2A\u4EBA\u4FE1\u606F
 mainPath=com.cloudwise
 #\u5305\u540D
 package=com.cloudwise
@@ -61,7 +61,7 @@ int4=Integer
 int2=Integer
 numeric=BigDecimal
 
-# 配置信息，分别对应响应类全路径，响应类名称，响应方法
+# \u914D\u7F6E\u4FE1\u606F\uFF0C\u5206\u522B\u5BF9\u5E94\u54CD\u5E94\u7C7B\u5168\u8DEF\u5F84\uFF0C\u54CD\u5E94\u7C7B\u540D\u79F0\uFF0C\u54CD\u5E94\u65B9\u6CD5
 resultClassFullName=com.test.ApiResponse
 resultClassSimpleName=ApiResponse
 setResultMethod=ApiResponse.ok
